fixed spacing, removed uncessary css

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,12 +1,3 @@
-:root {
-  --mainBrown: #352627;
-  --mainYellow: #ff9e09;
-  --secondaryYellow: #ff6309;
-  --mainGrey: #ece8dc;
-  --mainWhite: #f7f7f7;
-  --mainDark: #555555;
-}
-
 .logo {
   margin-top: 0.2em;
 }
@@ -16,21 +7,12 @@ p {
 }
 
 body {
-  background: var(--mainWhite);
-  color: var(--mainDark);
+  background: #f7f7f7;
+  color: #555555;
   margin: 0;
   box-sizing: border-box;
   font-family: "Cabin", sans-serif;
 }
-
-.text-yellow {
-  color: var(--mainYellow);
-}
-
-.text-price {
-  color: var(--secondaryYellow);
-}
-
 .default-background,
 .about-background {
   background: linear-gradient(
@@ -52,22 +34,17 @@ body {
   text-align: center;
 }
 
-.about-background {
-  min-height: 100vh;
-}
-
 .menu,
 .contact {
-  background: var(--mainGrey);
-  padding-bottom: 3em;
+  background: #ece8dc;
+  padding-bottom: 2em;
 }
 
+.story {
+  padding-bottom: 1em;
+}
 .products {
-  padding-bottom: 3em;
-}
-
-.product-cards {
-  min-height: 100%;
+  padding-bottom: 2em;
 }
 
 .product-image {
